--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,9 +32,8 @@ dependencies:
   flutter:
     sdk: flutter
   ffi: ^2.0.1
-  path: ^1.8.2
   get: ^4.6.5
-  cupertino_icons: ^1.0.2
+  file_selector: ^0.9.2
 
 dev_dependencies:
   flutter_test:
@@ -44,9 +43,11 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  assets:
+    - images/
 
 ffigen:
-  name: xhzq233
+  name: ffilib
   output: 'lib/ffi/generated_bindings.dart'
   headers:
     entry-points:
